--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #2c3e50; /* Updated background color */
+  background-color: #cfe0e8; /* Updated background color */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,7 +23,7 @@ body {
   font-size: 20px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
-  background-color: #3498db; /* Updated button background color */
+  background-color: #674d3c; /* Updated button background color */
   color: white; /* Updated button text color */
 }
 
