--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 body {
-  background: linear-gradient(0deg, #a883f9, #71f8f8);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
+  background: linear-gradient(0deg, #a883f9, #71f8f8);
+
 }
 
 .container {
@@ -128,6 +129,8 @@ body {
 
 .page-container {
   text-align: center; /* Center-align the content horizontally */
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 .page-heading {
